<resources>
    <string name="app_name">GameVui</string>

    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_saved">Saved</string>
    <string name="title_news">News</string>
    <string name="title_pc">PC</string>
    <string name="title_ps">PlayStation</string>
    <string name="title_xbox">Xbox</string>
    <string name="title_popular">Popular</string>
    <string name="title_available">Available on:</string>
    <string name="title_add">+Add to Saved</string>
    <string name="title_about">About</string>
    <string name="title_genre">Genre</string>
    <string name="title_developer">Developer</string>
    <string name="title_publisher">Publisher</string>
</resources>
