<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="homeVM"
            type="com.sun.gamevui.ui.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewActionbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_milano_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toBottomOf="@id/viewActionbar"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.407"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.464" />

        <TextView
            android:id="@+id/textAppName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/viewActionbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageLogo"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewActionbar"
            app:tabIndicatorColor="@color/color_milano_red"
            app:tabSelectedTextColor="@color/color_milano_red"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
            app:tabTextColor="@color/color_gray">

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_pc" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_ps" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_xbox" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPagerHome"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabHome" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
